--- a/quiz.css
+++ b/quiz.css
@@ -29,7 +29,7 @@ h1 {
 
 button {
   
-  background-color: #EA4C89;
+  background-color: #ed5c94;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
